<resources>
    <string name="app_name">Spontaniius</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_event_title">Find Event</string>
    <string name="create_event_title">Create Event</string>
    <string name="content_description_event_icon">An icon to represent the event</string>
    <string name="hint_event_title">Event Title</string>
    <string name="hint_event_description">Event Description</string>
    <string name="prompt_select_event_icon">Choose Event Icon</string>
    <string name="select_start_time_prompt">Start Time:</string>
    <string name="select_end_time_prompt">End Time:</string>
    <string name="select_gender_prompt">Gender Filter</string>
    <string name="select_location_prompt">Location</string>
    <string name="create_event">Create Event</string>
    <string name="invite_prompt">Invite:</string>
    <string name="invite_neighbours">Neighbours</string>
    <string name="invite_neighbourhood">Neighbourhood</string>
    <string name="invite_everyone">Everyone</string>
    <string name="warning_input_title">Please add a title to your event</string>
    <string name="warning_input_description">Please add a description to your event</string>
    <string name="prompt_choose_location">Map Select</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="title_activity_sign_up3">SignUpActivity3</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="done">Done</string>
    <string name="include_phone">Include Phone Number</string>
    <string name="include_greeting">Include Preferred Greeting</string>
    <string name="back">Back</string>
    <string name="hello">Hello my name is</string>
    <string name="custom">Customise your greeting card!</string>
    <string name="select">Seclect a background color</string>
    <string name="phone_string">Phone Number:</string>
    <string name="my_name">Hello my name is</string>
    <string name="special_string">Please greet me with a</string>
    <string name="five_string">high Five</string>
    <string name="wave_string">wave</string>
    <string name="hug_string">hug</string>
    <string name="shake_string">hand shake</string>
    <string name="greeted_string">How would you like to be greeted?</string>
    <string name="confirm_location_yes">Confirm location</string>
    <string name="warning_no_location">Please select a location first</string>

    <string-array name="color_array">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>White</item>
    </string-array>
    <string name="title_activity_find_event">FindEventActivity</string>
    <string name="find_screen">Join In</string>
    <string name="create_screen">Invite</string>
    <string name="promotions_screen">Deals</string>
    <string name="cards_screen">Cards</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_confirm_signup">ConfirmSignupActivity</string>
    <string name="title_activity_user_details">User Details Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name: </string>
    <string name="gender">Gender: </string>
    <string name="phone">Phone: </string>
    <string name="change_password">Change Password: </string>
    <string name="confirm_change_password">Confirm Changed Password: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_nonbinary">Non-Binary</string>
    <string name="gender_other">Other/Prefer not to say</string>
    <string name="apology_message">Our deepest apologies that you\'ve had a bad experience,and thank you for taking the time to report this. Can you tell us about what happened?</string>
    <string name="no_results_hint_text">Looks like there\'s no results in your area, maybe create one</string>
    <string name="create_an_event_hint_prompt">Create An Event</string>
    <string name="activation_code_label">Activation Code</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="exit_event">Exit Event</string>
    <string name="join_event">Join Event</string>
    <string name="event_chat">Event Chat</string>
    <string name="event_details">Event Details</string>
    <string name="welcome_to_spontaniius">Welcome To Spontaniius</string>
    <string name="report_label">What Happened?</string>
    <string name="report_hint">Describe the issue here...</string>
    <string name="go_back">Back</string>
    <string name="send_report">Send Report</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_sent">OTP Sent</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="add_details">Add Details</string>
    <string name="skip">Skip Card Creation</string>
    <string name="enter_name">Enter name</string>
    <string name="find_events_near_me">Find Events Near Me</string>
    <string name="create_an_event">Create An Event</string>
    <string name="default_text_drinks">Let\'s go have some drinks</string>
    <string name="default_text_bike">Let\'s go for a bike ride</string>
    <string name="default_text_eating">Let\'s grab some food</string>
    <string name="default_text_boardgames">Let\'s play</string>
    <string name="default_text_sports">Let\'s go play</string>
    <string name="default_text_walk">Let\'s go for a walk</string>
    <string name="default_text_videogame">Let\'s play </string>
    <string name="default_text_coffee">Meet me for coffee</string>
    <string name="default_text_other_activity">Join me for something fun!</string>
    <string name="activity_coffee">Meet me for coffee</string>
    <string name="activity_other">Join me for something fun!</string>
    <string name="placeholder_event_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="end_event">End Event</string>
    <string name="add_15_mins">Add 15 mins</string>
    <string name="about_event">About Event:</string>
    <string name="send">Send</string>
    <string name="event_title">Event Title</string>
    <string name="event_started">Event Started</string>
    <string name="event_ends">Event Ends</string>
    <string name="search_for_a_place">Search for a place</string>
    <string name="search_using_my_location">Search using my location</string>
    <string name="locate_me">Use my locate\n</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tea_coffee">tea / coffee</string>
    <string name="boardgames">boardgames</string>
    <string name="eating">eating</string>
    <string name="drinks">drinks</string>
    <string name="sports">sports</string>
    <string name="videogames">videogames</string>
    <string name="walking">walking</string>
    <string name="cycling">cycling</string>
    <string name="other">Other</string>
    <string name="accept_terms_continue">Accept Terms &amp; Continue</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_card">Edit Card</string>
    <string name="about_app">About App</string>
    <string name="app_feedback">App Feedback</string>
    <string name="report">Report</string>
    <string name="sign_out">Sign out</string>
    <string name="user_options">User Options</string>
    <string name="let_s_see_who_you_ve_met">Let\'s see who you\'ve met!</string>
    <string name="starts_in_format">starts in</string>
    <string name="ends_in_format">ends in</string>
    <string name="event_has_ended">Event has ended</string>
    <string name="hours_and_minutes">%3$s %1$d hour(s) %2$d minute(s)</string>
    <string name="only_hours">%2$s %1$d hour(s)</string>
    <string name="only_minutes">%2$s %1$d minute(s)</string>
    <string name="title_empty_error">Title cannot be empty!</string>
    <string name="select_location_error">Please select a location.</string>
    <string name="location_permission_error">Location permission denied</string>
    <string name="activation_code">Activation code</string>
    <string name="phone_number_prompt">Phone #</string>
    <string name="no_name_error_prompt">Please enter your name</string>
    <string name="report_text_error_prompt">Please enter a report message.</string>
    <string name="enter_the_activation_code">Enter the activation code</string>
    <string name="delete_confirm_prompt">Type \'%1$s\' to confirm</string>
    <string name="delete_account_dialog_title">Confirm Deletion</string>
    <string name="delete_confirmation_word">delete</string> <!-- For English -->
    <string name="delete_account_dialog">Are you sure you want to delete your account? This cannot be undone.</string>
    <string name="delete_confirmation_not_matched">Confirmation word not matched</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="directions">Directions</string>
    <string name="type_a_message">Type a message</string>
    <string name="search_for_card_by_name">Search for card by Name</string>
    <string name="go_and_meet_some_new_people">Go and meet some new people</string>
    <string name="elipsis">...</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="please_enter_confirmation_code_you_recieved_by_phone">Please Enter Confirmation Code You Recieved By Phone</string>
    <string name="new_password">New Password</string>
    <string name="send_confirmation">Send Confirmation</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="please_enter_confirmation_code_you_received_by_phone">Please Enter Confirmation Code You Received By Phone</string>
    <string name="confirm">Confirm</string>
    <string name="view_privacy_policy">View Privacy Policy</string>
    <string name="accept_terms_and_continue">Accept Terms and Continue</string>
</resources>
