<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drinks"
        android:title="@string/drinks"
        android:icon="@drawable/activity_drinks"
        android:iconTint="#4CAF50"
        android:iconTintMode="src_in"
        />
    <item
        android:id="@+id/eating"
        android:title="@string/eating"
        android:icon="@drawable/activity_eating"
        android:iconTint="#FFEB3B"
        android:iconTintMode="src_in"
        />
    <item
        android:id="@+id/boardgames"
        android:title="@string/boardgames"
        android:icon="@drawable/activity_boardgames"
        android:iconTint="#FFEB3B"
        android:iconTintMode="src_in"
        />

    <item
        android:id="@+id/coffee"
        android:title="@string/tea_coffee"
        android:icon="@drawable/activity_coffee"
        />

    <item
        android:id="@+id/sports"
        android:title="@string/sports"
        android:icon="@drawable/activity_sports"
        android:iconTint="#707070"
        android:iconTintMode="src_in"
        />

    <item
        android:id="@+id/videogame"
        android:title="@string/videogames"
        android:icon="@drawable/activity_videogame"
        />

    <item
        android:id="@+id/walk"
        android:title="@string/walking"
        android:icon="@drawable/activity_walk"
        />

    <item
        android:id="@+id/bike"
        android:title="@string/cycling"
        android:icon="@drawable/activity_bike"
        />
    <item
        android:id="@+id/other_activity"
        android:title="@string/other"
        android:icon="@drawable/activity_other"
        />


</menu>