<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">  <!-- Align content to the right -->

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:backgroundTint="@color/colorNeutral"
            />

        <Button
            android:id="@+id/chatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_chat"
            android:background="@drawable/spontaniius_primary_button"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_event"
            android:background="@drawable/spontaniius_primary_button"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/event_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/actions"/>


    <TextView
        android:id="@+id/about_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/quantum_black_100"
        app:layout_constraintTop_toBottomOf="@id/event_title"
        android:text="@string/about_event"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/event_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/quantum_black_100"
        android:text=""
        tools:text="@string/placeholder_event_description"
        app:layout_constraintTop_toBottomOf="@id/about_event_title"/>


    <LinearLayout
        android:id="@+id/event_time_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/event_description">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hasEventStarted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_started"
                android:textColor="@color/quantum_black_100"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/event_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/quantum_black_100"
                tools:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_ends"
                android:textColor="@color/quantum_black_100"

                android:textAlignment="center" />

            <TextView
                android:id="@+id/event_ends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="TextView"
                android:textColor="@color/quantum_black_100"

                android:textAlignment="center" />
        </LinearLayout>


    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"

        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/event_time_section"
        app:layout_constraintBottom_toTopOf="@id/secondary_actions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />


    <LinearLayout
        android:id="@+id/secondary_actions"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:translationY="-50dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        >
        <Button
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/directions"
            android:backgroundTint="@color/colorNeutral"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
